fix cards display on mobile, fix navbar behavior on mobile

--- a/main.scss
+++ b/main.scss
@@ -12,8 +12,10 @@
   padding-top: 4%;
 }
 
+
 #header-jumbotron {
   padding-top: 18%;
+  padding-bottom: 24%;
 }
 
 //cards
